fixing /removeFromBasket and /addToBasket (switch to statless api)
